Lego Editor Change Log
2014/11/19 - 2.0
  *  Get rid of all of the old tcc / tk3 libraries, instead, point at current OTF code from ISAAC
  *  Use otf-util module from ISAAC for common code like search
  *  Switch to Java 8 - get rid of old javaFX versions
  *  Clean up other technical debt / out of date things from the last year and a half.
  *  Allow setting of the next pending concept ID

2013/08/20 - 1.2.2
  *  Add the ability to create new LegoLists and Legos from a CSV or TSV text file.

2013/08/20 - 1.2.1
  *  Fixing an error in the included pendingConcepts.tsv file.

2013/08/20 - 1.2
  *  Improve the result sorting of type-ahead-search.
  *  Add "PNCS Value Field" as an allowed measurement constant.

2013/03/22 - 1.1
  *  Fix main GUI thread blocking while WB loading bug.
  
2013/03/22 - 1.0
  *  Filtered '(' and ')' out of the lucene queries so they FSNs don't cause searches to fail.
  *  Fixed a bug where the PNCS filter drop down wasn't being updated after a new lego was created
  *  Fixed a bug where rapid changes to the lego list filters could cause strange behavior
  *  Fixed a null pointer that could happen in certain situations within the filter update.
  *  Fixed a null pointer that happened if you tried to view a new (unsaved) lego in the web browser
  *  Moved the validator calls into a background (non-GUI) thread
  *  Added progress indicators for node validation-in-progress.
  *  Fixed a bug in the PointNode validation error reporting for intervals and bounds that was a 
     a regression in the 0.57 release. 
  *  Fixed a bug where the Lego filter could flag an blank concept field as invalid.
  *  Allow pending concepts to have pending concept parents (without logging a warning at startup)
  *  Fix bug on "View Concept" menu option when the concept in question was a pending concept.  Also allow
  		viewing of pending concepts, and show GUI indicator on pending concepts.
  *  Fixed a bug with showing the error dialog.